# TechAgro

./: .dockerignore  .env.example  .gitignore  404.html  Dockerfile  GEMINI.md   LICENSE  README.md  commands.txt  desafio.md  docker-compose.yml  entrypoint.sh  fly.toml  index.html  init-db.sh  mkdocs.yml  nginx.conf  objects.inv  pgadmin_connection.json  pyproject.toml  search.html
.github/workflows/: develop.yml  fly_pr_preview.yml  main.yml  terraform.yml
.terraform/: main.tf  outputs.tf  terraform.tfvars  variables.tf  versions.tf
ExecDocker/: index.html
ExecLocal/: index.html
app_django/: pyproject.toml
backend/: pyproject.toml
backend/config/: urls.py
backend/core/: admin.py  serializers.py  views.py
backend/docs/: ExecLocal.md  desafio.md  playload.md
backend/helpers/: logging_helper.py
backend/produtores/: serializers.py  services.py  urls.py  views.py
desafio/: index.html
docker/: .dockerignore  .env.example  .env.exemplo  Dockerfile  docker-compose.yml  entrypoint.sh  nginx.conf
docs/: casos_uso.md  home.md  index.md  license.md  regras_de_negocio.md  sobre.md
framework/config/: settings.py
home/: index.html
infra-cloud-aws/: backend.tf  ecs.tf  main.tf  provider.tf  rds.tf  variables.tf  vpc.tf
infra-local/: main.tf
license/: index.html
mobile/plan/: entidades.md
playload/: index.html
search/: search_index.json
sobre/: index.html
techagro/: pytest.ini
techagro/config/: settings.py  urls.py
techagro/core/: base.py  models.py  urls.py  validators.py
techagro/docs/: ExecDocker.md  adrs.md  casos_uso.md
(+54 files in other folders)
