[project]
name = "app-django"
version = "0.1.0"
description = ""
authors = [
    {name = "Edson L. B. Filho",email = "edcastanha@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "app_django", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
